@@ -10,6 +10,7 @@
 - fix support for `Window.set_wm_transient_for`
 - fix support for `Drawable.put_image` / `Drawable.get_image`
 - use ASCII for decoding strings in Python 3 (same as Python 2)
+- fix Python 3 warnings about `array.tostring()` (deprecated)
 
 ** Misc
 
